--- a/Styles/logindocentes.css
+++ b/Styles/logindocentes.css
@@ -47,7 +47,7 @@ body {
 /* Estilos para el título */
 .titulo {
     font-size: 60px;
-    color: #09ff00;
+    color: #d1efd0;
     font-family: minecraft;
     margin-bottom: 20px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Sombra de texto */
